# awattar

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: python-test.yml
awattar/: __init__.py  cli.py  client.py  marketitem.py
examples/: async_example.py  example.py
test/: example_analyse.py
tests/: assert_dates_equal.py  test_api.py  test_cli.py
