[build-system]
requires = ["setuptools>=68", "setuptools_scm[toml]>=7.1"]
build-backend = "setuptools.build_meta"

[project]
name = "awattar"
description = "aWATTar Client to analyse the energy market data"
authors = [{ name = "Peter Gransdorfer", email = "peter.gransdorfer@cattronix.com" }]
license = { text = "GPL-3.0" }
classifiers = [
    'Development Status :: 4 - Beta',
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License (GPL)",
    "Operating System :: OS Independent",
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Topic :: Software Development :: Libraries',
    'Topic :: Software Development :: Libraries :: Python Modules',   
]
keywords = ["awattar", "energy market price api"]
requires-python = ">=3.8"
dependencies = [
    "requests", 
    "datetime", 
    "python-dateutil",
    "click>=8.1.7"
]
dynamic = ["version"]

[project.optional-dependencies] # Optional
dev = [
    "flake8"
]
test = [
    "tzlocal", 
    "pytest"
]

[project.scripts]
awattar = "awattar:_cli"

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Homepage = "https://github.com/Gransi/awattar"
Download = "https://github.com/Gransi/awattar"
Tracker = "https://github.com/Gransi/awattar/issues"
Source = "https://github.com/Gransi/awattar"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages]
find = { namespaces = false }

[tool.setuptools_scm]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.flake8]
# Check that this is aligned with your other tools like Black
max-line-length = 120
exclude = [
    # No need to traverse our git directory
    ".git",
    # There's no value in checking cache directories
    "__pycache__"
]
# Use extend-ignore to add to already ignored checks which are anti-patterns like W503.
extend-ignore = [
    # PEP 8 recommends to treat : in slices as a binary operator with the lowest priority, and to leave an equal
    # amount of space on either side, except if a parameter is omitted (e.g. ham[1 + 1 :]).
    # This behaviour may raise E203 whitespace before ':' warnings in style guide enforcement tools like Flake8.
    # Since E203 is not PEP 8 compliant, we tell Flake8 to ignore this warning.
    # https://black.readthedocs.io/en/stable/the_black_code_style/current_style.html#slices    
    "E203"
]